tests/snapshots/python_rune_ergonomics_tests__diff_expect_chain.snap
---
source: tests/python_rune_ergonomics_tests.rs
expression: stderr
---
┌─────────────┬───────────┬────────────────┐
│             Grading Overview             │
├─────────────┼───────────┼────────────────┤
│ Requirement │ Grade     │ Reason         │
├─────────────┼───────────┼────────────────┤
│ test        │ 5.00/5.00 │ Case 1: PASSED │
│             │           │                │
│             │           │ Case 2: PASSED │
├─────────────┼───────────┼────────────────┤
│             Total: 5.00/5.00             │
└─────────────┴───────────┴────────────────┘
