tests/snapshots/python_rune_ergonomics_tests__query_must_not_for_loop_fails_when_present.snap
---
source: tests/python_rune_ergonomics_tests.rs
expression: stderr
---
┌─────────────┬───────────┬──────────────────────────┐
│                  Grading Overview                  │
├─────────────┼───────────┼──────────────────────────┤
│ Requirement │ Grade     │ Reason                   │
├─────────────┼───────────┼──────────────────────────┤
│ test        │ 0.00/5.00 │ Query 1: Expected no     │
│             │           │ matches, found 3 matches │
├─────────────┼───────────┼──────────────────────────┤
│                  Total: 0.00/5.00                  │
└─────────────┴───────────┴──────────────────────────┘
