tests/snapshots/python_rune_ergonomics_tests__query_uses_decorator.snap
---
source: tests/python_rune_ergonomics_tests.rs
expression: stderr
---
┌─────────────┬───────────┬────────────────────┐
│               Grading Overview               │
├─────────────┼───────────┼────────────────────┤
│ Requirement │ Grade     │ Reason             │
├─────────────┼───────────┼────────────────────┤
│ test        │ 5.00/5.00 │ All queries passed │
├─────────────┼───────────┼────────────────────┤
│               Total: 5.00/5.00               │
└─────────────┴───────────┴────────────────────┘
